# GenAI

./: .gitignore  chat_history.txt  pyproject.toml
interfaces/: message_palaceholder_output.py
modules/chains/: sequantial.py  simple.py
modules/langchain/chains/: perallel.py
modules/langchain/models/: model.py
modules/langchain/output/parser/: json_output_parser.py
modules/langchain/prompts/: messages.py  promptTemplating.py  template.json
modules/langchain/runnable/: runable_bracnch.py  runnable_lembda.py  runnable_passthrough.py  runnable_perallal.py  runnable_sequance.py
modules/models/: embednig.py
modules/output/parser/: pydentic_output_parser.py  string_output_parser.py  structerd_ouput_parser.py
modules/output/structerd/: pydentic_structure.py  typedict_sturcture.py
modules/prompts/: chat_template.py  chatbot.py  message_placeholder.py  promptTemplating.py
modules/runnable/: runable_bracnch.py
