[project]
name = "genai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain[google-genai]>=1.3.1",
    "langchain-community>=0.4.1",
    "pydentic>=0.0.1.dev3",
    "python-decouple>=3.8",
    "grandalf>=0.8",
]
